test/core/errors/packages_error/zs/imported_unknown_single_type_error.zs
package imported_unknown_single_type_error;

// This is an error because UnknownTable is not defined in package simple_database.
import simple_database.UnknownTable;